# wyrcan-image-debian

./: Cargo.toml  Dockerfile  Dockerfile.standalone  Dockerfile.use_prebuild  README.md  dockerfile  zones.yaml
.github/workflows/: build.dockerfile  build.yaml  build_and_push_image.yaml
crates/rtrs/: Cargo.toml
crates/rtrs/src/: lib.rs  main.rs
crates/vendor-user-agent-parser/: Cargo.toml  README.md  build.rs
crates/vendor-user-agent-parser/src/: lib.rs  parsers.rs  test.rs
rtrs-shuttle/: Cargo.toml
rtrs-shuttle/src/: main.rs
src/: main.rs
