[package]
name = "rtrs-lib"
version = "0.1.0"
edition = "2021"
default-run = "rtrs"

[lib]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["cargo"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
axum = "0.6"
mime = "0.3"
rand = "0.8"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
fast_uaparser = "2"
base64 = "0.21"
