[package]
name = "fast_uaparser"
version = "2.0.1"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/philbooth/uaparser-rs"
documentation = "https://philbooth.gitlab.io/uaparser-rs/fast_uaparser/"
description = "Regex-based parser for User-Agent request headers"
keywords = ["user-agent", "ua", "header", "parser"]
categories = ["parsing"]
authors = ["Phil Booth <pmbooth@gmail.com>"]
build = "build.rs"

[dependencies]
fancy-regex-fork-pb = "0.1.1"
lazy_static = ">=1.3.0"
parking_lot = ">=0.9.0"
serde = ">=1.0.97"

[build-dependencies]
fancy-regex-fork-pb = "0.1.1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = ">=1.0.97", features = ["derive"] }
serde_yaml = ">=0.8.9"
tokio = { version = ">=0.2.11", features = ["full"] }

[badges]
gitlab = { repository = "philbooth/uaparser-rs", branch = "master" }
maintenance = { status = "actively-developed" }
